# sedona-db-gpu-tester

./: .asf.yaml  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  mkdocs.yml
.github/: dependabot.yml
.github/actions/setup-wheel-build/: action.yml
.github/workflows/: assign-reviewer-write.yml  dev.yml  examples.yml  packaging.yml  python-wheels.yml  python.yml  r-extended.yml  r.yml  run-gpu-join.yml  rust-gpu.yml  rust.yml  wheels-expr.yml  wheels-zarr.yml
benchmarks/: test_aggregates.py
c/sedona-extension/: Cargo.toml
c/sedona-extension/src/: execution_plan.rs  extension.rs  lib.rs  scalar_kernel.rs  sedona_extension.h  streaming.rs  table_provider.rs  utils.rs
c/sedona-gdal/: Cargo.toml
c/sedona-gdal/src/: dataset.rs  dyn_load.rs  gdal.rs  gdal_dyn_bindgen.rs  mem.rs  vsi.rs
c/sedona-geos/src/: geos_to_wkb.rs  lib.rs  register.rs  st_area.rs  st_boundary.rs  st_buffer.rs  st_buildarea.rs  st_centroid.rs  st_concavehull.rs  st_convexhull.rs  st_delaunaytriangles.rs  st_exteriorring.rs  st_hausdorffdistance.rs  st_isring.rs  st_issimple.rs  st_isvalid.rs  st_isvalidreason.rs  st_length.rs  st_line_locate_point.rs  st_line_merge.rs  st_makevalid.rs  st_minimumclearance.rs  st_minimumclearance_line.rs  st_normalize.rs  st_nrings.rs  st_numinteriorrings.rs  st_perimeter.rs  st_pointonsurface.rs  st_polygonize.rs  st_reduce_precision.rs  st_simplify.rs  st_simplifypreservetopology.rs  st_unaryunion.rs
c/sedona-libgpuspatial/src/: lib.rs
c/sedona-proj/src/: lib.rs  sd_order_lnglat.rs  st_transform.rs  transform.rs
c/sedona-s2geography/: Cargo.toml  build.rs
c/sedona-s2geography/src/: geography.rs  kernels.rs  lib.rs  rect_bounder.rs  register.rs  s2geography_c_bindgen.rs  st_analyze_agg.rs  st_envelope.rs  st_envelope_agg.rs  st_xy_minmax.rs
c/sedona-tg/src/: tg.rs
ci/scripts/: wheels-build-zarr-linux.sh  wheels-build-zarr-macos.sh  wheels-build-zarr-windows.ps1
dev/release/: README.md  rat_exclude_files.txt  verify-release-candidate.sh
docker/: build.sh  sedonadb-gpu.dockerfile  sedonadb-gpu.dockerfile.dockerignore
docs/: contributors-guide.md  gpu-acceleration.ipynb  gpu-acceleration.md  quickstart-python.ipynb  quickstart-python.md  working-with-zarr-ndarray-sedonadb.ipynb  working-with-zarr-ndarray-sedonadb.md
docs/reference/: python-zarr.md
docs/reference/sql/: _render_meta.py  rs_asraster.qmd  rs_bandtodim.qmd  rs_contains.qmd  rs_dimnames.qmd  rs_dimsize.qmd  rs_dimtoband.qmd  rs_frompath.qmd  rs_georeference.qmd  rs_intersects.qmd  rs_isempty.qmd  rs_metadata.qmd  rs_numdimensions.qmd  rs_polygonize.qmd  rs_rastertoworldcoord.qmd  rs_rastertoworldcoordx.qmd  rs_rastertoworldcoordy.qmd  rs_setbandnodatavalue.qmd  rs_setgeoreference.qmd  rs_shape.qmd  rs_slice.qmd  rs_slicerange.qmd  rs_value.qmd  rs_within.qmd  rs_worldtorastercoord.qmd  rs_worldtorastercoordx.qmd  rs_worldtorastercoordy.qmd  s2_cellidfrompoint.qmd  s2_coveringcellids.qmd  st_analyze_agg.qmd  st_area.qmd  st_asbinary.qmd  st_astext.qmd  st_boundary.qmd  st_buffer.qmd  st_buildarea.qmd  st_centroid.qmd  st_contains.qmd  st_convexhull.qmd  st_convexhull_agg.qmd  (+72 more)
examples/: .gitignore
examples/sedonadb-rust/: Cargo.toml
examples/sedonadb-rust-pointcloud/: Cargo.toml
python/sedonadb/: Cargo.toml  README.md  pyproject.toml
python/sedonadb-expr/: .gitignore  README.md  _version.py  hatch_build.py  pyproject.toml
python/sedonadb-expr/python/sedonadb_expr/: __init__.py  _codegen.py  utils.py
python/sedonadb-expr/tests/: test_codegen.py  test_utils.py
python/sedonadb-zarr/: .gitignore  Cargo.toml  README.md  pyproject.toml
python/sedonadb-zarr/python/sedonadb_zarr/: __init__.py
python/sedonadb-zarr/src/: lib.rs
python/sedonadb-zarr/tests/: conftest.py  test_zarr.py  test_zarr_raster_functions.py
python/sedonadb/src/: context.rs  dataframe.rs  datasource.rs  error.rs  expr.rs  import_from.rs  lib.rs  raster_loader.rs  reader.rs  runtime.rs  schema.rs  udf.rs
python/sedonadb/tests/: test_aggregate_udf.py  test_context.py  test_dataframe.py  test_dataframe_ffi.py  test_funcs.py  test_raster.py  test_raster_loader.py  test_read.py  test_sjoin.py  test_udf.py
r/sdplyr/: .Rbuildignore  .lintr.R  DESCRIPTION  NAMESPACE
r/sdplyr/R/: arrange.R  collect.R  filter.R  join.R  mutate.R  sdplyr-package.R  select.R  summarise.R  zzz.R
r/sdplyr/man/: sdplyr-package.Rd
r/sdplyr/tests/: testthat.R
r/sedonadb/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  bootstrap.R  configure  configure.win
r/sedonadb/R/: 000-wrappers.R  dataframe-join.R  dataframe.R  expression.R  join-expression.R  zzz.R
r/sedonadb/man/: dot-fns.Rd  dot-tables.Rd  sd_expr_column.Rd  sd_join.Rd  sd_join_by.Rd  sd_join_select.Rd  sd_join_select_default.Rd  sd_read_sf.Rd  sd_summarise.Rd  sedonadb-package.Rd  sedonadb_adbc.Rd
r/sedonadb/src/: init.c
r/sedonafns/: .Rbuildignore  .gitignore  .lintr.R  DESCRIPTION  README.Rmd  README.md  bootstrap.R  configure  configure.win
r/sedonafns/R/: .gitignore  sedonafns-package.R  (+1 more)
rust/sedona/: Cargo.toml
rust/sedona-adbc/: Cargo.toml
rust/sedona-common/: Cargo.toml
rust/sedona-datasource/: Cargo.toml
rust/sedona-geo/: Cargo.toml
rust/sedona-geo-generic-alg/: Cargo.toml
rust/sedona-geoparquet/: Cargo.toml
rust/sedona-pointcloud/: Cargo.toml
rust/sedona-raster/: Cargo.toml
rust/sedona-raster-functions/: Cargo.toml
rust/sedona-raster-gdal/: Cargo.toml
rust/sedona-raster-gdal/benches/: rs_as_raster.rs  rs_frompath.rs  rs_metadata.rs  rs_polygonize.rs
rust/sedona-raster-gdal/src/: gdal_common.rs  gdal_dataset_provider.rs  lib.rs  raster_loader.rs  register.rs  rs_as_raster.rs  rs_frompath.rs  rs_metadata.rs  rs_polygonize.rs  source_uri.rs  utils.rs
rust/sedona-raster-zarr/: Cargo.toml
rust/sedona-raster-zarr/src/: coords.rs  dtype.rs  geozarr.rs  lib.rs  loader.rs  raster_loader.rs  source_uri.rs
rust/sedona-raster-zarr/tests/: cloud.rs  zarr_roundtrip.rs
rust/sedona-schema/: Cargo.toml
rust/sedona-spatial-join-geography/: Cargo.toml
rust/sedona-spatial-join-gpu/: Cargo.toml
sedona-cli/: Cargo.toml
(+251 files in other folders)
