# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["hatchling", "pyyaml"]
build-backend = "hatchling.build"

[project]
name = "sedonadb-expr"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pyyaml",
]

[tool.hatch.version]
source = "code"
path = "_version.py"
expression = "get_version()"

[tool.hatch.build.targets.wheel]
packages = ["python/sedonadb_expr"]
# Exclude _generated and _version.py from packages since force-include handles them
# (avoids duplicate file errors when building from sdist/tarball)
exclude = ["python/sedonadb_expr/_generated", "python/sedonadb_expr/_version.py"]
# Generated files are in .gitignore but must be included in the wheel
force-include = { "python/sedonadb_expr/_generated" = "sedonadb_expr/_generated", "python/sedonadb_expr/_version.py" = "sedonadb_expr/_version.py" }

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# Generated files are in .gitignore but must be included in the sdist
# so that builds from sdist don't require the docs/ directory.
force-include = { "python/sedonadb_expr/_generated" = "python/sedonadb_expr/_generated", "python/sedonadb_expr/_version.py" = "python/sedonadb_expr/_version.py" }

[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"
