# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "sedonadb-zarr"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    # `ExternalFormatSpec` + `list_single_object` landed in 0.4.0. The floor is
    # an explicit prerelease (`0.4.0a0`) so dev/nightly builds — which version
    # as `0.4.0aN` and are PEP 440-*less* than `0.4.0` — satisfy it; a plain
    # `>=0.4.0` would reject the matching nightly sedonadb wheel (and break
    # `pip install` of the nightly for users, not just CI).
    "sedonadb>=0.4.0a0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "zarr",
    "numpy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "sedonadb_zarr._lib"
python-source = "python"
