# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-raster-gdal"
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "GDAL integration for Apache SedonaDB raster types"
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
datafusion-common = { workspace = true }
datafusion-expr = { workspace = true }
lru = { workspace = true }
sedona-common = { workspace = true }
sedona-expr = { workspace = true }
sedona-functions = { workspace = true }
sedona-gdal = { workspace = true }
sedona-raster = { workspace = true }
sedona-raster-functions = { workspace = true }
sedona-schema = { workspace = true }
tokio = { workspace = true }

[features]
# Enable bindgen for GDAL versions without pre-built bindings (e.g., GDAL 3.13+).
bindgen = ["sedona-gdal/bindgen"]

[dev-dependencies]
criterion = { workspace = true }
sedona-gdal = { workspace = true, features = ["gdal-sys"] }
sedona-testing = { workspace = true }
sedona-proj = { workspace = true, features = ["proj-sys"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
harness = false
name = "rs_frompath"
path = "benches/rs_frompath.rs"

[[bench]]
harness = false
name = "rs_metadata"
path = "benches/rs_metadata.rs"

[[bench]]
harness = false
name = "rs_polygonize"
path = "benches/rs_polygonize.rs"

[[bench]]
harness = false
name = "rs_as_raster"
path = "benches/rs_as_raster.rs"
