# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
[package]
name = "sedona-raster-zarr"
version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints.clippy]
result_large_err = "allow"

[dependencies]
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
datafusion-common = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
object_store = { workspace = true, features = ["aws", "fs", "http"] }
sedona-common = { workspace = true }
sedona-raster = { workspace = true }
sedona-schema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
zarrs = { workspace = true, features = ["async", "gzip", "zlib", "zstd", "blosc", "crc32c", "sharding", "transpose"] }
zarrs_object_store = { workspace = true }

[dev-dependencies]
object_store = { workspace = true, features = ["aws", "http"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
# Test fixtures write Zarr groups to a temp dir; the loader itself
# reads everything through object_store, so this is dev-only.
zarrs_filesystem = { workspace = true }
